[gd_scene load_steps=8 format=3 uid="uid://cbt7vqa66nexo"]

[ext_resource type="Script" uid="uid://ckjt5d5jk5me6" path="res://scripts/interface/tracker.gd" id="1_4u4yt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e8ajb"]
bg_color = Color(0.678944, 0.678944, 0.678944, 1)
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rkg3n"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id="Theme_4u4yt"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 14
Button/styles/hover = SubResource("StyleBoxFlat_e8ajb")
Button/styles/normal = SubResource("StyleBoxFlat_rkg3n")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4u4yt"]
bg_color = Color(0.453588, 0.0138666, 0.0996207, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmj2w"]
bg_color = Color(0.694318, 0, 0.141849, 0.85098)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id="Theme_e8ajb"]
Button/styles/hover = SubResource("StyleBoxFlat_4u4yt")
Button/styles/normal = SubResource("StyleBoxFlat_xmj2w")

[node name="Tracker" type="Button"]
offset_right = 64.0
offset_bottom = 20.0
theme = SubResource("Theme_4u4yt")
text = "Id"
alignment = 0
clip_text = true
script = ExtResource("1_4u4yt")

[node name="Active" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = 17.0
offset_right = 64.0
offset_bottom = 20.0
color = Color(0.671521, 0, 0.175479, 1)

[node name="Marker" type="ColorRect" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 57.0
offset_right = 64.0
offset_bottom = 20.0
mouse_filter = 1
color = Color(6.54578e-06, 0.716402, 0.813987, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 67.0
offset_right = 80.0
offset_bottom = 20.0
tooltip_text = "Удалить"
theme = SubResource("Theme_e8ajb")
theme_override_font_sizes/font_size = 8
clip_text = true

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="Button" to="." method="_on_delete_button_down"]
